--- a/package.json
+++ b/package.json
@@ -2,14 +2,16 @@
     "name": "chat2",
     "version": "1.0.0",
     "description": "WhatsApp Bot",
-    "main": "app.js",
+    "main": "server.js",
+    "scripts": {
+        "start": "node ./server.js",
+        "test": "echo \"Error: no test specified\" && exit 1"
     "dependencies": {
         "qrcode-terminal": "^0.12.0",
         "whatsapp-web.js": "^1.16.3"
     },
     "devDependencies": {},
-    "scripts": {
-        "test": "npm start"
+
     },
     "author": "SEAD",
     "license": "ISC"
