--- a/package.json
+++ b/package.json
@@ -1,18 +1,24 @@
 {
-    "name": "chat2",
+    "name": "test-ws-bot",
     "version": "1.0.0",
-    "description": "WhatsApp Bot",
+    "description": "",
     "main": "app.js",
     "scripts": {
         "start": "node ./app.js",
         "test": "echo \"Error: no test specified\" && exit 1"
+    },
+    "keywords": [],
+    "author": "",
+    "license": "ISC",
     "dependencies": {
         "qrcode-terminal": "^0.12.0",
-        "whatsapp-web.js": "^1.16.3"
+        "whatsapp-web.js": "^1.16.1"
     },
-    "devDependencies": {},
-
+    "devDependencies": {
+        "pm2": "^5.1.2",
+        "prettier": "2.5.1"
     },
-    "author": "SEAD",
-    "license": "ISC"
+    "engines": {
+        "node": "14.x"
+    }
 }
